# RC-Project-Autonomous-Car

./: .gitignore  .pylintrc  README.md  cascade.xml  config.yml  config.yml.template  data.db  desktop_design.ui  pyproject.toml
.github/workflows/: test.yml
Arduino/Arduino_VESC_PPM/: Arduino_VESC_PPM.ino
Arduino/Arduino_sbus_example/: Arduino_sbus_example.ino
Python/: Colordetection.py  edge_detect.py  get_hsv_value.py  qr_code_test.py  requirements.txt
QR-Code-recognition/src/: camera.py  main.py  qr_code.py  test_qr_code.py
Stereoscopic Vision/: README.md  stero-vision parameter tuning.xlsx
Stereoscopic Vision/data/: stereo_parameters.xml
Stereoscopic Vision/src/: calibrate.py  camera.py  main.py  stereoscopic_vision.py  take_photos.py
computer_vision/: 2d_mapping.py  __main__.py  defines.py  gps_module.py  joystick_module.py  lib.py  main_headless.py  main_headless_new.py  main_headless_old.py  main_simulation.py  main_window_ui.py  mapping_2d.py  module_setup.py  pathfinding.py  qt5_example_code.py  tmp.py
driving/: config.yaml  lib.py  main.py
driving_simulation/: config.yml  defines.py  driving.py  driving_loop.py  driving_setup.py  lib.py  main.py
lane_detection/: main.py
stereoscopic_vision/: README.md
tests/: initial_test.py  latency_test.py  test_camera_handler.py  test_lane_detection.py  test_line_detection.py  test_merge.py  test_parking_slot_detection.py  test_pathfinding.py  test_qr_code.py  test_stereo_vision.py  test_stop_sign_detection.py  test_traffic_sign_detection.py
traffic_sign_detection/: main.py
(+110 files in other folders)
