[tool.poetry]
name = "computer-vision"
version = "0.1.0"
description = ""
authors = ["Asbjørn Stokka <asbjorn.stokka@lyse.net>"]
readme = "README.md"
packages = [{include = "computer_vision"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.68"
pylint = "^2.15.10"
pygame = "2.1.3.dev8"
pyyaml = "^6.0"
pyserial = "^3.5"
can = "^0.0.0"
python-can = "^4.1.0"
imutils = "^0.5.4"
pynput = "^1.7.6"

[tool.poetry.group.gui]
optional = true

[tool.poetry.group.gui.dependencies]
pyqt6 = "^6.4.0"
pyqtgraph = "^0.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
